feat:esercizio completo

--- a/index.html
+++ b/index.html
@@ -13,20 +13,27 @@
 </head>
 
 <body>
-    <header class="myheader">
-        <div class="myheader-title">
-            <h1>ESTATE '24</h1>
+    <div class="overlay">
+        <div class="overlay-content">
+            <button id="chiudi" >Chiudi</button>
+            <img src="./600x600.png" alt="">
         </div>
-    </header>
+    </div>
+            <header class="myheader">
+                <div class="myheader-title">
+                    <h1>ESTATE '24</h1>
+                </div>
+            </header>
 
-    <main class="mymain">
-        <div class="mycontainer">
-            <div class="row">
+            <main class="mymain">
+                <div class="mycontainer">
+                    <div class="row">
 
-            </div>
+                    </div>
 
-        </div>
-    </main>
+                </div>
+            </main>
+
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./script/script.js"></script>
